# GPR200-FinalProject-JaceSean

./: CMakeLists.txt
assignments/: GPRFinalProjectSubmission.txt
assignments/WaveSim/: CMakeLists.txt  main.cpp
assignments/WaveSim/assets/shaders/: cubeFrag.glsl  cubeVert.glsl  lightFrag.glsl  waveVert.glsl
core/: CMakeLists.txt
core/Camera/: camera.cpp  camera.h
core/Wave/: waves.cpp  waves.h
core/math/: smath.h
core/object/: mesh.cpp  mesh.h  object.cpp  object.h  transform.h
core/shader/: shader.cpp  shader.h
